--- a/RegistroPrestamo/Pages/Index.razor
+++ b/RegistroPrestamo/Pages/Index.razor
@@ -1,5 +1,12 @@
 ﻿@page "/"
 
+@inject IToastService toastService
+
+<button class="btn btn-info" @onclick="@(() => toastService.ShowInfo("Welcome to TheCodehubs"))">Info Toast</button>
+<button class="btn btn-success" @onclick="@(() => toastService.ShowSuccess("Se Guardo de Forma Exitosa!"))">Success Toast</button>
+<button class="btn btn-warning" @onclick="@(() => toastService.ShowWarning("Advertencia!"))">Warning Toast</button>
+<button class="btn btn-danger" @onclick="@(() => toastService.ShowError("Oops!Un error ha ocurrido"))">Error Toast</button>
+
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
