--- a/RegistroPrestamo/Pages/RPrestamos.razor
+++ b/RegistroPrestamo/Pages/RPrestamos.razor
@@ -39,8 +39,13 @@
 
                 <div class="form-group">
                     <label>Persona:</label>
-                    <InputSelect @bind-Value="Prestamo.PersonaId" class="form-control" />
-                    <ValidationMessage For="@(() => Prestamo.PersonaId)" />
+                    <select id="Persona_select" @bind="Prestamo.PersonaId" class="form-control">
+                        <option value="" disabled selected>Elija una Persona</option>
+                        @foreach (var item in Lista)
+                        {
+                            <option value="@item.Id">@item.Nombre</option>
+                        }
+                    </select>
                 </div>
 
                 <div class="form-group">
@@ -84,11 +89,40 @@
 
 
 @code {
+
     Prestamos Prestamo = new Prestamos();
+
+    [Parameter]
+    public int PrestamosId { get; set; }
+
+    private List<Personas> Lista = new List<Personas>();
+
+
+    protected override void OnInitialized()
+    {
+        Nuevo();
+        ObtenerLista();
+    }
+
+
+    private void ObtenerLista()
+    {
+        if (PrestamosId > 0)
+        {
+            var auxPretamo = PrestamoBLL.Buscar(PrestamosId);
+            if (auxPretamo != null)
+                this.Prestamo = auxPretamo;
+            else
+                toast.ShowWarning("No encontrado.");
+        }
+
+        Lista = PersonaBLL.GetList(p => true);
+    }
+
 
     private void Nuevo()
     {
-
+        Prestamo = new Prestamos();
     }
 
     private void Guardar()
