--- a/RegistroPrestamo/Pages/Registros/RPrestamos.razor
+++ b/RegistroPrestamo/Pages/Registros/RPrestamos.razor
@@ -77,13 +77,7 @@
         </div>
     </div>
 
-    <p />
 
-    <div class-group>
-        <button type="button" @onclick="Nuevo">Nuevo</button>
-        <button type="submit" @onclick="Guardar">Guardar</button>
-        <button type="button" @onclick="Eliminar">Eliminar</button>
-    </div>
 
 </EditForm>
 
@@ -125,19 +119,49 @@
         Prestamo = new Prestamos();
     }
 
+
+
     private void Guardar()
     {
+        bool paso;
+        paso = PrestamoBLL.Guardar(Prestamo);
 
+        if (paso)
+        {
+            Nuevo();
+            toast.ShowSuccess("Guardado correctamente");
+        }
+        else
+        {
+            toast.ShowError("No fue posible guardar");
+        }
     }
+
 
     private void Eliminar()
     {
+        bool elimino;
 
+        elimino = PrestamoBLL.Eliminar(Prestamo.PrestamoId);
+
+        if (elimino)
+        {
+            Nuevo();
+            toast.ShowSuccess("Eliminado correctamente");
+        }
+        else
+            toast.ShowError("No fue posible eliminar");
     }
 
     private void Buscar()
     {
-
+        var encontrado = PrestamoBLL.Buscar(Prestamo.PrestamoId);
+        if (encontrado != null)
+        {
+            this.Prestamo = encontrado;
+        }
+        else
+            toast.ShowWarning("No encontrado");
     }
 
 
